[package]
name = "discord-dx11-overlay-hook"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.2.17"

[dependencies]
egui-directx11 = { path = "../egui-directx11" }
minhook = "0.7.1"
egui = {workspace = true}
egui-win32 = {path = "../egui-win32"}
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Graphics_Direct3D11", "Win32_Security", "Win32_System_Com", "Win32_System_Console", "Win32_Graphics_Dxgi", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System", "Foundation", "Win32_Graphics_Dxgi_Common"] }
once_cell = "1.21.1"
parking_lot = "0.12.3"

egui_demo_lib = "0.22.0"